--- a/src/_main.scss
+++ b/src/_main.scss
@@ -2,7 +2,7 @@ main {
   position: relative;
   width: 80vw;
   margin: 0 auto;
-  padding: 2em 1em 6em 1em;
+  padding: 0em 1em 6em 2em;
   border-radius: 0.75rem;
   background-color: white;
   box-shadow: 0 2em 1em -0.5em rgba(0, 0, 0, 0.2);
